New logo, favicon, YouTube demo video, plus several videos updated.

--- a/index.html
+++ b/index.html
@@ -19,19 +19,21 @@
 </head>
 
 <body>
-
-    <!-- Header -->
-    <header>
-        <div class="header-content">
-            <h1>Show House App</h1>
-            <p>From <strong>blueprints</strong> directly to your clients’ <strong>pockets</strong>!</p>
+    <Header >
+        <!-- <img class= "header-bg" src="assets/images/Chicago-med.webp" /> -->
+        <div class="header-img-logo" >
+            <!-- <h1>Show House App</h1>
+            <p>From <strong>blueprints</strong> directly to your clients’ <strong>pockets</strong>!</p> -->
+            <img src="assets/images/Logo SHA.png" alt="Show House App running on multiple devices" />
         </div>
+        
+
         <video class="" playsinline muted autoplay loop preload="auto">
-            <!-- <source src="https://www.shakr.com/static/fold-video-h265-68213d44c6d8f537233a8536b67c3694.mp4" type="video/mp4; codecs=hevc"> -->
-            <!-- <source src="https://www.shakr.com/static/fold-video-vp9-673c4c58a9109989a39a97ea802176d2.webm" type="video/webm; codecs=vp9,opus"> -->
-            <source src="assets/videos/Navigating.mp4" type="video/mp4">
+            <source src="assets/videos/HeroVideo.mp4" type="video/mp4">
         </video>
-    </header>
+   </header>
+   
+
     <!-- Intro -->
     <main>
         <div class="wrapper">
@@ -43,6 +45,16 @@
                     it like if they were visiting it.
                 </p>
                 <p>Available on mobile platforms, desktop and the web!</p>
+
+                <div class="side-padder">
+                    <div class="container-YouTube">
+                        <iframe class="video-YouTube" src="https://www.youtube.com/embed/D6L10Oj7wTQ"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                        </iframe>                        
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -53,7 +65,7 @@
                 <div class="section-text">
                     <h3>Model</h3>
                     <p>Explore a model of the building to study the distribution. Rotate, pan, and zoom, plus
-                        deconstruct the building like a Lego to understand volumes.</p>
+                        disassemble the building like a dollhouse to understand volumes.</p>
                 </div>
                 <div class="section-image">
                     <video class="" playsinline muted autoplay loop preload="auto">
@@ -91,16 +103,16 @@
             </div>            
             <div class="section">
                 <div class="section-text">
-                    <h3>Dynamic design</h3>
+                    <h3>Inspire with interaction</h3>
 
-                    <p>Change the materials of any kind of surfaces, open and close doors, change furnitures… Enhance
-                        the
-                        imagination of your visitors!
+                    <p>Go beyond passively looking at renders and prefabricated images and experience living on your new home.</p>
+                    <p>Experiment changing materials, colors and furniture. Open and close doors, interact with kitchens, hear the birds singing when walking outside.
+                        Use the latest in <strong>video game technology</strong> to enhance the imagination of your clients!
                     </p>
                 </div>
                 <div class="section-image">
                     <video class="" playsinline muted autoplay loop preload="auto">
-                        <source src="assets/videos/Materials.mp4" type="video/mp4">
+                        <source src="assets/videos/Interactivity.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
@@ -339,7 +351,7 @@
                 <div class="section-image">
                     <p>
                         <video class="" playsinline muted autoplay loop preload="auto">
-                            <source src="assets/videos/Model.mp4" type="video/mp4">
+                            <source src="assets/videos/DemoBuilding.mp4" type="video/mp4">
                         </video>
                     </p>
                 </div>
