Change in style. New images. Test website deleted.

--- a/apps/promoalfar-segovia33/contact.html
+++ b/apps/promoalfar-segovia33/contact.html
@@ -8,7 +8,7 @@
 <body>
 <div class="popup-menu-div">
     <a href="./homeScreen.html">
-        <i class="fa fa-home" style="font-size:48px;"></i>
+        <i class="fa fa-home"></i>
     </a>
 </div>
 
@@ -26,9 +26,10 @@
 </div>
 <img class="company-image" src="./assets/img/logo_promoalfar.png"/>
 <div class="buttonContainer">
-    <a class="button button--contact" id="model_button" href="http://www.promoalfar.es/" target="_blank"><img src="./assets/img/icons/web.png"/> <span class="contact-button-text">www.promoalfar.es/</span></a>
+    <a class="button button--contact" id="model_button" href="http://www.promoalfar.es/" target="_blank"><img src="./assets/img/icons/web.png"/> <span class="contact-button-text">www.promoalfar.es</span></a>
     <a class="button button--contact" id="model_button" href="mailto:ventas@promoalfar.es"><img src="./assets/img/icons/email.png"/> <span class="contact-button-text">ventas@promoalfar.es</span></a>
     <a class="button button--contact" id="model_button" href="tel:0034660005151"><img src="./assets/img/icons/phone.png"/> <span class="contact-button-text">660 00 51 51</span></a>
 </div>
+<br/><br/>
 </body>
 </html>
