--- a/apps/promoalfar-segovia33/index.html
+++ b/apps/promoalfar-segovia33/index.html
@@ -11,6 +11,6 @@
 <br/>
 <h2>Información legal</h2>
 <p>La información y documentación gráfica que aparecen en esta app son orientativas y están sujetas a modificaciones, así como las superficies indicadas, derivadas del proyecto de ejecución y de su construcción. Todo el mobiliario que figura en esta app es orientativo y no forma parte del producto vendido.</p>
-<div class="right-layout"><p><button type="button" id="go_home_button" onclick="window.location.href='./homeScreen.html';">Entendido</button></p></div>
+<div class="right-layout"><p><button style="font-size: large;" type="button" id="go_home_button" onclick="window.location.href='./homeScreen.html';">Entendido</button></p></div>
 </body>
 </html>
