--- a/apps/promoalfar-segovia33/info.html
+++ b/apps/promoalfar-segovia33/info.html
@@ -5,12 +5,13 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Informaci&oacute;n de la promoci&oacute;n</title>
+    <script src="./js/aframe-master.js"></script>
 </head>
 
 <body>
     <div class="popup-menu-div">
         <a href="./homeScreen.html">
-            <i class="fa fa-home" style="font-size:48px;"></i>
+            <i class="fa fa-home"></i>
         </a>
     </div>
 
@@ -25,6 +26,7 @@
         src="./assets/img/hero_interior.jpg" />
     <img class="photo-image"
         src="./assets/img/hero_exterior_sin_edificios.jpg" />
+    <br/><br/>
 </body>
 
 </html>
