--- a/apps/promoalfar-segovia33/model.html
+++ b/apps/promoalfar-segovia33/model.html
@@ -11,17 +11,17 @@
 <body>
   <div class="popup-menu-div" onclick='event.stopPropagation();'>
     <a href="./homeScreen.html">
-      <i class="fa fa-home" style="font-size:48px;"></i>
+      <i class="fa fa-home" ></i>
     </a>
     <br />
     <a onclick="openDialog()">
-      <i class="fa fa-map-o" style="font-size:40px;"></i>
+      <i class="fa fa-map-o" style="font-size:0.8em;"></i>
     </a>
   </div>
 
   <div class="dialog-box" id="dialog" style="display: none;">
     <div class="dialog-header">
-      <h2>¿A qué planta quiere ir?</h2>
+      <h2>¿Qué planta quiere ver?</h2>
       <button class="close-btn" onclick="closeDialog()">&times;</button>
     </div>
     <div class="dialog-content">
