--- a/apps/promoalfar-segovia33/contact.html
+++ b/apps/promoalfar-segovia33/contact.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Contacto</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
 </head>
 <body>
 <div class="popup-menu-div">
@@ -21,15 +22,15 @@
 <p>Promueve <b>Promoalfar</b>, grupo dedicado a la promoción de viviendas de renta libre en el núcleo urbano de Sevilla, enfocado en la satisfacción y trato cercano con el cliente final.</p>
 <img class="company-image" src="./assets/img/logo_royma.png"/>
 <div class="buttonContainer">
-    <a class="button button--contact" id="model_button" href="https://www.roymainmobiliaria.com/" target="_blank"><img src="./assets/img/icons/web.png"/> <span class="contact-button-text">www.roymainmobiliaria.com</span></a>
-    <a class="button button--contact" id="model_button" href="mailto:info@roymainmobiliaria.com"><img src="./assets/img/icons/email.png"/> <span class="contact-button-text">info@roymainmobiliaria.com</span></a>
-    <a class="button button--contact" id="model_button" href="tel:0034618955250"><img src="./assets/img/icons/phone.png"/> <span class="contact-button-text">618 95 52 50</span></a>
+    <a class="button--contact" id="model_button" href="https://www.roymainmobiliaria.com/" target="_blank"><img src="./assets/img/icons/web.png"/> <span class="contact-button-text">www.roymainmobiliaria.com</span></a>
+    <a class="button--contact" id="model_button" href="mailto:info@roymainmobiliaria.com"><img src="./assets/img/icons/email.png"/> <span class="contact-button-text">info@roymainmobiliaria.com</span></a>
+    <a class="button--contact" id="model_button" href="tel:0034618955250"><img src="./assets/img/icons/phone.png"/> <span class="contact-button-text">618 95 52 50</span></a>
 </div>
 <img class="company-image" src="./assets/img/logo_promoalfar.png"/>
 <div class="buttonContainer">
-    <a class="button button--contact" id="model_button" href="http://www.promoalfar.es/" target="_blank"><img src="./assets/img/icons/web.png"/> <span class="contact-button-text">www.promoalfar.es</span></a>
-    <a class="button button--contact" id="model_button" href="mailto:ventas@promoalfar.es"><img src="./assets/img/icons/email.png"/> <span class="contact-button-text">ventas@promoalfar.es</span></a>
-    <a class="button button--contact" id="model_button" href="tel:0034660005151"><img src="./assets/img/icons/phone.png"/> <span class="contact-button-text">660 00 51 51</span></a>
+    <a class="button--contact" id="model_button" href="http://www.promoalfar.es/" target="_blank"><img src="./assets/img/icons/web.png"/> <span class="contact-button-text">www.promoalfar.es</span></a>
+    <a class="button--contact" id="model_button" href="mailto:ventas@promoalfar.es"><img src="./assets/img/icons/email.png"/> <span class="contact-button-text">ventas@promoalfar.es</span></a>
+    <a class="button--contact" id="model_button" href="tel:0034660005151"><img src="./assets/img/icons/phone.png"/> <span class="contact-button-text">660 00 51 51</span></a>
 </div>
 <br/><br/>
 </body>
