--- a/apps/promoalfar-segovia33/homeScreen.html
+++ b/apps/promoalfar-segovia33/homeScreen.html
@@ -9,6 +9,7 @@
   </script>
     <Title>Mar&iacute;a Josefa Segovia, 33</Title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
 </head>
 <body>
     <img class="title-image" src="assets/img/logo_promoalfar.png"/>
