--- a/apps/promoalfar-segovia33/index.html
+++ b/apps/promoalfar-segovia33/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Aviso legal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
 </head>
 <body>
 <img class="title-image" src="./assets/img/logo_promoalfar.png"/>
