--- a/apps/promoalfar-segovia33/info.html
+++ b/apps/promoalfar-segovia33/info.html
@@ -7,6 +7,7 @@
     <title>Informaci&oacute;n de la promoci&oacute;n</title>
     <script src="./js/aframe-master.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
 </head>
 
 <body>
