--- a/apps/promoalfar-segovia33/contact.html
+++ b/apps/promoalfar-segovia33/contact.html
@@ -6,6 +6,7 @@
     <title>Contacto</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <link  rel="icon"   href="./assets/img/favicon.png" type="image/png" />
 </head>
 <body>
 <div class="popup-menu-div">
