--- a/apps/promoalfar-segovia33/homeScreen.html
+++ b/apps/promoalfar-segovia33/homeScreen.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="styles.css" />
+  <link  rel="icon"   href="./assets/img/favicon.png" type="image/png" />
   <script>
     function navigateToPage(page) {
       window.location.href = page;
