--- a/apps/promoalfar-segovia33/info.html
+++ b/apps/promoalfar-segovia33/info.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link  rel="icon"   href="./assets/img/favicon.png" type="image/png" />
     <title>Informaci&oacute;n de la promoci&oacute;n</title>
     <script src="./js/aframe-master.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
