--- a/apps/promoalfar-segovia33/model.html
+++ b/apps/promoalfar-segovia33/model.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="dialog.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link  rel="icon"   href="./assets/img/favicon.png" type="image/png" />
   <title>Maqueta</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8" />
