Better sizing for pop-up icons.

--- a/apps/promoalfar-segovia33/pano.html
+++ b/apps/promoalfar-segovia33/pano.html
@@ -16,11 +16,11 @@
 <body>
   <div class="popup-menu-div">
     <a href="./homeScreen.html">
-      <i class="fa fa-home" style="font-size:48px;"></i>
+      <i class="fa fa-home"></i>
     </a>
     <br />
     <a id="AChangeImage" onclick="openDialog()">
-      <i class="fa fa-map-o" style="font-size:40px;"></i>
+      <i class="fa fa-map-o" style="font-size:0.8em;"></i>
     </a>
   </div>
   <!-- <a href="homeScreen.html">Volver</a> -->
