User can no longer control video playback by touching or clicking on the video.

--- a/apps/promoalfar-segovia33/model.html
+++ b/apps/promoalfar-segovia33/model.html
@@ -41,7 +41,8 @@
 
   <div class="video-container">
     <video id="modelVideo" class="video-model" playsinline muted autoplay loop controlList="nodownload" preload="auto"
-      onclick="videoPlayback()" src="assets/vid/Azotea_cubierta.m4v" type="video/mp4">
+      src="assets/vid/Azotea_cubierta.m4v" type="video/mp4">
+      <!-- onclick="videoPlayback()" -->
     </video>
     <a onclick="openFullscreen();" class="video-fullScreen-button"><i class="fa fa-expand"></i></a>
   </div>
