New menu on top of the site. Removed the 'pop-up' menu.

--- a/apps/promoalfar-segovia33/info.html
+++ b/apps/promoalfar-segovia33/info.html
@@ -3,7 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="topMenu.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.2.0/css/all.min.css">
     <link  rel="icon"   href="./assets/img/favicon.png" type="image/png" />
     <title>Informaci&oacute;n de la promoci&oacute;n</title>
     <script src="./js/aframe-master.js"></script>
@@ -12,11 +13,12 @@
 </head>
 
 <body>
-    <div class="popup-menu-div">
-        <a href="./homeScreen.html">
-            <i class="fa fa-home"></i>
-        </a>
+
+    <div class="top-menu-div">
+        <a href="./homeScreen.html"><i class="fa fa-home"></i>Inicio</a>
     </div>
+
+    <br/><br /><br />
 
     <h1 class="title-text">María Josefa Segovia nº 33</h1>
     <br />
