--- a/apps/promoalfar-segovia33/contact.html
+++ b/apps/promoalfar-segovia33/contact.html
@@ -1,38 +1,53 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="topMenu.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.2.0/css/all.min.css">
     <title>Contacto</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
-    <link  rel="icon"   href="./assets/img/favicon.png" type="image/png" />
+    <link rel="icon" href="./assets/img/favicon.png" type="image/png" />
 </head>
-<body>
-<div class="popup-menu-div">
-    <a href="./homeScreen.html">
-        <i class="fa fa-home"></i>
-    </a>
-</div>
 
-<h1 class="title-text">María Josefa Segovia nº 33</h1>
-<br/>
-<h2>Información de contacto</h2>
-<p>No dude en contactarnos para saber más sobre esta promoción. Estaremos encantados de ayudarle y asesorarle.</p>
-<p>Comercializa <b>Royma</b>, inmobiliaria con más de veinte años de experiencia ayudándote a encontrar la casa de tu vida, con la profesionalidad y el asesoramiento que merece una decisión tan importante.</p>
-<p>Promueve <b>Promoalfar</b>, grupo dedicado a la promoción de viviendas de renta libre en el núcleo urbano de Sevilla, enfocado en la satisfacción y trato cercano con el cliente final.</p>
-<img class="company-image" src="./assets/img/logo_royma.png"/>
-<div class="buttonContainer">
-    <a class="button--contact" id="model_button" href="https://www.roymainmobiliaria.com/" target="_blank"><img src="./assets/img/icons/web.png"/> <span class="contact-button-text">www.roymainmobiliaria.com</span></a>
-    <a class="button--contact" id="model_button" href="mailto:info@roymainmobiliaria.com"><img src="./assets/img/icons/email.png"/> <span class="contact-button-text">info@roymainmobiliaria.com</span></a>
-    <a class="button--contact" id="model_button" href="tel:0034618955250"><img src="./assets/img/icons/phone.png"/> <span class="contact-button-text">618 95 52 50</span></a>
-</div>
-<img class="company-image" src="./assets/img/logo_promoalfar.png"/>
-<div class="buttonContainer">
-    <a class="button--contact" id="model_button" href="http://www.promoalfar.es/" target="_blank"><img src="./assets/img/icons/web.png"/> <span class="contact-button-text">www.promoalfar.es</span></a>
-    <a class="button--contact" id="model_button" href="mailto:ventas@promoalfar.es"><img src="./assets/img/icons/email.png"/> <span class="contact-button-text">ventas@promoalfar.es</span></a>
-    <a class="button--contact" id="model_button" href="tel:0034660005151"><img src="./assets/img/icons/phone.png"/> <span class="contact-button-text">660 00 51 51</span></a>
-</div>
-<br/><br/>
+<body>
+
+    <div class="top-menu-div">
+        <a href="./homeScreen.html"><i class="fa fa-home"></i>Inicio</a>
+    </div>
+
+    <br/><br /><br />
+
+    <h1 class="title-text">María Josefa Segovia nº 33</h1>
+    <br />
+    <h2>Información de contacto</h2>
+    <p>No dude en contactarnos para saber más sobre esta promoción. Estaremos encantados de ayudarle y asesorarle.</p>
+    <p>Comercializa <b>Royma</b>, inmobiliaria con más de veinte años de experiencia ayudándote a encontrar la casa de
+        tu vida, con la profesionalidad y el asesoramiento que merece una decisión tan importante.</p>
+    <p>Promueve <b>Promoalfar</b>, grupo dedicado a la promoción de viviendas de renta libre en el núcleo urbano de
+        Sevilla, enfocado en la satisfacción y trato cercano con el cliente final.</p>
+    <img class="company-image" src="./assets/img/logo_royma.png" />
+    <div class="buttonContainer">
+        <a class="button--contact" id="model_button" href="https://www.roymainmobiliaria.com/" target="_blank"><img
+                src="./assets/img/icons/web.png" /> <span
+                class="contact-button-text">www.roymainmobiliaria.com</span></a>
+        <a class="button--contact" id="model_button" href="mailto:info@roymainmobiliaria.com"><img
+                src="./assets/img/icons/email.png" /> <span
+                class="contact-button-text">info@roymainmobiliaria.com</span></a>
+        <a class="button--contact" id="model_button" href="tel:0034618955250"><img src="./assets/img/icons/phone.png" />
+            <span class="contact-button-text">618 95 52 50</span></a>
+    </div>
+    <img class="company-image" src="./assets/img/logo_promoalfar.png" />
+    <div class="buttonContainer">
+        <a class="button--contact" id="model_button" href="http://www.promoalfar.es/" target="_blank"><img
+                src="./assets/img/icons/web.png" /> <span class="contact-button-text">www.promoalfar.es</span></a>
+        <a class="button--contact" id="model_button" href="mailto:ventas@promoalfar.es"><img
+                src="./assets/img/icons/email.png" /> <span class="contact-button-text">ventas@promoalfar.es</span></a>
+        <a class="button--contact" id="model_button" href="tel:0034660005151"><img src="./assets/img/icons/phone.png" />
+            <span class="contact-button-text">660 00 51 51</span></a>
+    </div>
+    <br /><br />
 </body>
+
 </html>
