--- a/apps/promoalfar-segovia33/contact.html
+++ b/apps/promoalfar-segovia33/contact.html
@@ -42,10 +42,10 @@
     <div class="buttonContainer">
         <a class="button--contact" id="model_button" href="http://www.promoalfar.es/" target="_blank"><img
                 src="./assets/img/icons/web.png" /> <span class="contact-button-text">www.promoalfar.es</span></a>
-        <a class="button--contact" id="model_button" href="mailto:ventas@promoalfar.es"><img
-                src="./assets/img/icons/email.png" /> <span class="contact-button-text">ventas@promoalfar.es</span></a>
-        <a class="button--contact" id="model_button" href="tel:0034660005151"><img src="./assets/img/icons/phone.png" />
-            <span class="contact-button-text">660 00 51 51</span></a>
+        <!-- <a class="button--contact" id="model_button" href="mailto:ventas@promoalfar.es"><img
+                src="./assets/img/icons/email.png" /> <span class="contact-button-text">ventas@promoalfar.es</span></a> -->
+        <!-- <a class="button--contact" id="model_button" href="tel:0034660005151"><img src="./assets/img/icons/phone.png" />
+            <span class="contact-button-text">660 00 51 51</span></a> -->
     </div>
     <br /><br />
 </body>
