Añadida la memoria de calidades a la página de información.

--- a/apps/promoalfar-segovia33/info.html
+++ b/apps/promoalfar-segovia33/info.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="topMenu.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.2.0/css/all.min.css">
-    <link  rel="icon"   href="./assets/img/favicon.png" type="image/png" />
+    <link rel="icon" href="./assets/img/favicon.png" type="image/png" />
     <title>Informaci&oacute;n de la promoci&oacute;n</title>
     <script src="./js/aframe-master.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,7 +18,7 @@
         <a href="./homeScreen.html"><i class="fa fa-home"></i>Inicio</a>
     </div>
 
-    <br/><br /><br />
+    <br /><br /><br />
 
     <h1 class="title-text">María Josefa Segovia nº 33</h1>
     <br />
@@ -27,11 +27,88 @@
         servicios de Sevilla.</p>
     <p>Viviendas de 3 dormitorios, vestidor y 2 baños equipadas con altas calidades de construcción.</p>
     <p><b>Obras comenzadas.</b></p>
-    <img class="photo-image"
-        src="./assets/img/hero_interior.jpg" />
-    <img class="photo-image"
-        src="./assets/img/hero_exterior_sin_edificios.jpg" />
-    <br/><br/>
+    <img class="photo-image" src="./assets/img/hero_interior.jpg" />
+    <img class="photo-image" src="./assets/img/hero_exterior_sin_edificios.jpg" />
+
+    <h2>Memoria de calidades</h2>
+    <h3>Estructura</h3>
+    <ul>
+        <li>Sistema bidireccional de hormigón armado, constituido por forjados de losa armada de 30 cm y pilares de
+            hormigón armado.</li>
+    </ul>
+    <h3>Cubierta</h3>
+    <ul>
+        <li>Cubierta invertida plana a la andaluza de alto aislamiento térmico y acabada con baldosa de gres
+            porcelánico.</li>
+    </ul>
+    <h3>Cerramientos exteriores</h3>
+    <ul>
+        <li>Fachada principal de ladrillo cara vista del tipo Malpesa de color blanco, cámara de 30 mm, aislamiento
+            acústico y térmico de lana de roca de 80 mm y doble placa de cartón/yeso de 12,50 mm cada una.</li>
+    </ul>
+    <h3>Carpinteria exterior</h3>
+    <ul>
+        <li>Carpintería de altas prestaciones térmicas y acústicas de aluminio lacado con rotura de puente térmico.</li>
+        <li>Vidrios de 6 y 4+4 con cámara de12 mm o similar.</li>
+        <li>Persianas enrollables de lamas de aluminio térmico y cajón aislado de color idéntico a la carpintería.</li>
+        <li>Barandillas y rejas metálicas de pletinas y cuadradillos de acero.</li>
+    </ul>
+    <h3>Carpinteria interior</h3>
+    <ul>
+        <li>Puerta de acceso a la vivienda blindada con plancha de acero galvanizado en su interior y rechapada a dos
+            caras en madera, con aislamiento acústico de 35 dBA, cerradura de seguridad de 3 puntos y mirilla óptica.
+        </li>
+        <li>Puertas interiores de DM lacadas en blanco.</li>
+        <li>Frente de armarios empotrados con puertas con idénticas características a las interiores de paso.</li>
+    </ul>
+    <h3>Particiones interiores</h3>
+    <ul>
+        <li>Tabiquería interior de viviendas con placas de cartón/yeso en cada cara de 12,50 mm.</li>
+        <li>Zonas comunes con fábrica de ladrillo de 12 cm enfoscado y trasdosado autoportante con aislamiento de lana
+            de roca y con doble placa de yeso laminado.</li>
+    </ul>
+    <h3>Acabados</h3>
+    <ul>
+        <li>En suelos, pavimento de gres porcelánico, siendo antideslizante en terrazas de áticos y patios.</li>
+        <li>En paredes, pintura plástica. En la zona de aguas de los baños, aplacado de gres porcelánico rectificado.
+        </li>
+        <li>En Fachadas exteriores, revoco de acabado fino.</li>
+        <li>Falsos techos de placa de yeso laminado en zonas señaladas y en zonas de ubicación de máquinas interiores de
+            climatización será registrable con perfilería semioculta.</li>
+    </ul>
+    <h3>Fontaneria, climatización y ventilación</h3>
+    <ul>
+        <li>Instalación de climatización frío-calor centralizada por vivienda de marca reconocida en el mercado, con
+            unidad interior de diseño integrado y unidad exterior en terraza común de planta ático.</li>
+
+        <li>Sistema de ventilación en viviendas con cumplimiento del Código Técnico de la Edificación.</li>
+
+        <li>En cocinas, conductos independientes para campana.</li>
+    </ul>
+
+    <h3>Aparatos sanitarios y griferias</h3>
+    <ul>
+        <li>Sanitarios de porcelana vitrificada en color blanco de primera marca del mercado.</li>
+        <li>Mueble de baño con cajonera.</li>
+        <li>Grifería monomando, empotrada en ducha.</li>
+        <li>Plato de ducha extraplano blanco.</li>
+    </ul>
+    <h3>Electricidad y telecomunicaciones</h3>
+    <ul>
+        <li>Las viviendas, están dotadas de los elementos que marca el Reglamento Electrotécnico de Baja Tensión, con
+            grado de electrificación elevada.</li>
+        <li>Antena colectiva TV/FM y preinstalación de antena parabólica con derivación en cada vivienda.</li>
+        <li>Tomas de telecomunicaciones en salón comedor y dormitorio principal.</li>
+        <li>Instalación de videoportero.</li>
+        <li>Iluminación de espacios colectivos con tecnología Led y detectores de presencia para minimizar su consumo y
+            sus gastos de mantenimiento.</li>
+    </ul>
+    <h3>Zonas comunes</h3>
+    <ul>
+        <li>Portal y zonas comunes del edificio con solería de gres porcelánico antideslizante.</li>
+        <li>Ascensor.</li>
+    </ul>
+    <br /><br />
 </body>
 
 </html>
